# soccerwise

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: update.py  update.yml
.streamlit/: config.toml
src/: about.py  app.py  over_under.csv  over_under.py  standings.csv  standings.py
