[project]
name = "goldenbootdraft.tracker"
description = "Tracking the annual Soccerwise Golden Boot competition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Brian Greenwood" },
]
keywords = [
  "soccer",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "streamlit",
  "itscalledsoccer",
  "polars",
  "great_tables"
]
version = "0.1.0"

[project.urls]
Repository = "https://github.com/bgrnwd/goldenbootdraft.tracker"

[dependency-groups]
dev = [
  "pytest",
  "ruff"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["E501"]
extend-select = ["I"]

[tool.poetry]
package-mode = false
