[project]
name = "soccerwise"
description = "Tracking the annual Soccerwise Golden Boot competition and Over/Under predictions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Brian Greenwood" },
]
keywords = [
  "soccer",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "streamlit>=1.52.0",
  "itscalledsoccer",
  "polars",
  "great_tables"
]
version = "0.1.1"

[project.urls]
Repository = "https://github.com/bgrnwd/soccerwise"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["E501"]
extend-select = ["I"]

[tool.poetry]
package-mode = false
